--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.1.96:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass
 
