--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.datasource.url=jdbc:mysql://192.168.1.96:3306/vollmed_api?allowPublicKeyR
 spring.datasource.username=root
 spring.datasource.password=pass
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.error.include-stacktrace=never
+server.error.include-stacktrace=ALWAYS
 
 api.security.token.secret=${JWT_SECRET:12345678}
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
