--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,12 @@
 	<packaging>jar</packaging>
 	<name>api</name>
 	<description>API Rest da aplicação Voll.med</description>
+	
 	<properties>
 		<java.version>17</java.version>
+        <docker.image.prefix>API.med.voll</docker.image.prefix>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -116,6 +119,14 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.9</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 				</configuration>
 			</plugin>
 		</plugins>
