--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8081
+server.port=${SERVER_PORT:8081}
 #spring.datasource.url=jdbc:mysql://localhost/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://192.168.1.96:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://192.168.1.96:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:pass}
+
 
 spring.jpa.hibernate.ddl-auto=update
 
