--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<name>api</name>
 	<description>API Rest da aplicação Voll.med</description>
 	<properties>
+		<docker.image.prefix>API.med.voll</docker.image.prefix>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -118,6 +119,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.9</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
