--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8081
+server.port=${SERVER_PORT:8081}
 #spring.datasource.url=jdbc:mysql://localhost/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://192.168.1.96:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://192.168.1.110:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${DATASOURCE_USERNAME:root}
+spring.datasource.password=${DATASOURCE_PASSWORD:pass}
+
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -14,3 +15,5 @@ server.error.include-stacktrace=ALWAYS
 api.security.token.secret=${JWT_SECRET:12345678}
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
