--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:mysql://192.168.1.96:3306/vollmed_api_test?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://192.168.1.96:3306/vollmed_api_test?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false}
