--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${SERVER_PORT:8081}
 #spring.datasource.url=jdbc:mysql://localhost/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://192.168.1.110:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false}
-spring.datasource.username=${DATASOURCE_USERNAME:root}
-spring.datasource.password=${DATASOURCE_PASSWORD:pass}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://192.168.1.110:3306/vollmed_api?allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:pass}
 
 
 spring.jpa.hibernate.ddl-auto=update
